# pypbl

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml  release.yml
binder/: for_brewdog_presentation.ipynb  for_brewdog_taste_profiles.ipynb  pypbl.ipynb  requirements.txt
docs/source/: conf.py  elicitation.rst  examples.rst  index.rst  install.rst  intro.rst  priors.rst  samplers.rst
examples/: beers.py  cars.py
examples/data/: bdbeers.csv
presentation/: requirements.txt
src/pypbl/: __init__.py  elicitation.py  priors.py  samplers.py
tests/: test_elicitation.py  test_priors.py  test_pypbl.py  test_samplers.py
validation/: simple_validation.py
