[tool.poetry]
name = "pypbl"
version = "0.0.0"
description = ""
authors = ["jimparr <jim.parr@mclaren.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.0"
scipy = "^1.4.1"
emcee = "^3.0.2"
pandas = "^0.25.3"
dunamai = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
